fix spacing in storing box

--- a/src/containers/Dashboard/AccountCard.scss
+++ b/src/containers/Dashboard/AccountCard.scss
@@ -7,13 +7,13 @@
     width: 100%;
     height: 1px;
     background-color: #eeeeee;
-    margin: 20px 0px;
+    margin: 20px 0px 15px;
   }
 
   .cryptocur {
     font-size: 13px;
     color: #000000;
-    margin-bottom: 20px;
+    margin-bottom: 11px;
   }
 
   .realcur {
